<resources>
    <string name="app_name">MyCheckins</string>

    <string name="new_record">New</string>
    <string name="help">Help</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="details">Details</string>
    <string name="show_map">Show map</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
</resources>
