<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="current date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/backgrounds"
                android:text="lat lang" />

            <Button
                android:id="@+id/btnShowMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/iv_receiptImage"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="2"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/btn_captureImage"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="capture" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/delete"
        android:visibility="gone" />

</RelativeLayout>